--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "s100"]
 	path = s100
 	url = git@github.com:horse13/s100.git
+[submodule "module01"]
+	path = module01
+	url = git@github.com:horse13/module01.git
